Testcases/pos/test08.jl
function main()
a::Integer =  10
c::Float64 = a
end
main()
