Testcases/neg/test04.jl
# undefined variable in declaration
function main()

a::Integer = 6
b::Integer 
b = a/2


end
main()
